@@ -37,11 +37,12 @@
 (autoload-command (quote previous-workspace-window) (quote sawfish.wm.commands.cycle))
 (autoload-command (quote next-window) (quote sawfish.wm.commands.cycle))
 (autoload-command (quote previous-window) (quote sawfish.wm.commands.cycle))
-(autoload-command (quote describe-symbol) (quote sawfish.wm.commands.describe))
-(autoload-command (quote apropos-function) (quote sawfish.wm.commands.describe))
-(autoload-command (quote apropos-function-to-screen) (quote sawfish.wm.commands.describe))
-(autoload-command (quote apropos-variable) (quote sawfish.wm.commands.describe))
-(autoload-command (quote apropos-variable-to-screen) (quote sawfish.wm.commands.describe))
+(autoload-command (quote describe-symbol) (quote sawfish.wm.commands.describe) #:user-level (quote expert))
+(autoload-command (quote describe-symbol-to-screen) (quote sawfish.wm.commands.describe) #:user-level (quote expert))
+(autoload-command (quote apropos-function) (quote sawfish.wm.commands.describe) #:user-level (quote expert))
+(autoload-command (quote apropos-function-to-screen) (quote sawfish.wm.commands.describe) #:user-level (quote expert))
+(autoload-command (quote apropos-variable) (quote sawfish.wm.commands.describe) #:user-level (quote expert))
+(autoload-command (quote apropos-variable-to-screen) (quote sawfish.wm.commands.describe) #:user-level (quote expert))
 (autoload-command (quote gnome-toggle-skip-winlist) (quote sawfish.wm.commands.gnome))
 (autoload-command (quote gnome-set-skip-winlist) (quote sawfish.wm.commands.gnome))
 (autoload-command (quote gnome-clear-skip-winlist) (quote sawfish.wm.commands.gnome))
@@ -51,6 +52,7 @@
 (autoload-command (quote gnome-logout) (quote sawfish.wm.commands.gnome))
 (autoload-command (quote gnome-www-page) (quote sawfish.wm.commands.gnome))
 (autoload-command (quote gnome-help-browser) (quote sawfish.wm.commands.gnome))
+(autoload-command (quote gnome-about) (quote sawfish.wm.commands.gnome))
 (autoload-command (quote make-group-sticky) (quote sawfish.wm.commands.groups))
 (autoload-command (quote make-group-unsticky) (quote sawfish.wm.commands.groups))
 (autoload-command (quote toggle-group-sticky) (quote sawfish.wm.commands.groups))
@@ -62,9 +64,9 @@
 (autoload-command (quote move-group-right) (quote sawfish.wm.commands.groups))
 (autoload-command (quote move-group-up) (quote sawfish.wm.commands.groups))
 (autoload-command (quote move-group-down) (quote sawfish.wm.commands.groups))
-(autoload-command (quote raise-group) (quote sawfish.wm.commands.groups))
-(autoload-command (quote lower-group) (quote sawfish.wm.commands.groups))
-(autoload-command (quote raise-lower-group) (quote sawfish.wm.commands.groups))
+(autoload-command (quote raise-group) (quote sawfish.wm.commands.groups) #:user-level (quote expert))
+(autoload-command (quote lower-group) (quote sawfish.wm.commands.groups) #:user-level (quote expert))
+(autoload-command (quote raise-lower-group) (quote sawfish.wm.commands.groups) #:user-level (quote expert))
 (autoload-command (quote raise-group-depth) (quote sawfish.wm.commands.groups))
 (autoload-command (quote lower-group-depth) (quote sawfish.wm.commands.groups))
 (autoload-command (quote grow-window-left) (quote sawfish.wm.commands.grow-pack))
@@ -79,6 +81,7 @@
 (autoload-command (quote help:show-news) (quote sawfish.wm.commands.help))
 (autoload-command (quote help:show-programmer-manual) (quote sawfish.wm.commands.help))
 (autoload-command (quote help:show-homepage) (quote sawfish.wm.commands.help))
+(autoload-command (quote help:about) (quote sawfish.wm.commands.help))
 (autoload-command (quote move-cursor-right) (quote sawfish.wm.commands.move-cursor))
 (autoload-command (quote move-cursor-left) (quote sawfish.wm.commands.move-cursor))
 (autoload-command (quote move-cursor-up) (quote sawfish.wm.commands.move-cursor))
@@ -91,6 +94,12 @@
 (autoload-command (quote resize-window-interactively) (quote sawfish.wm.commands.move-resize))
 (autoload-command (quote move-selected-window) (quote sawfish.wm.commands.move-resize))
 (autoload-command (quote resize-selected-window) (quote sawfish.wm.commands.move-resize))
+(autoload-command (quote raise-and-pass-through-click) (quote sawfish.wm.commands.raise-commands))
+(autoload-command (quote raise-and-pass-through-click-if-focused) (quote sawfish.wm.commands.raise-commands))
+(autoload-command (quote raise-or-pass-through-click) (quote sawfish.wm.commands.raise-commands))
+(autoload-command (quote raise-window-and-pass-through-click) (quote sawfish.wm.commands.raise-commands) #:user-level (quote expert))
+(autoload-command (quote raise-group-and-pass-through-click) (quote sawfish.wm.commands.raise-commands) #:user-level (quote expert))
+(autoload-command (quote raise-transients-and-pass-through-click) (quote sawfish.wm.commands.raise-commands) #:user-level (quote expert))
 (autoload-command (quote size-window-add-row) (quote sawfish.wm.commands.size-window))
 (autoload-command (quote size-window-subtract-row) (quote sawfish.wm.commands.size-window))
 (autoload-command (quote size-window-add-column) (quote sawfish.wm.commands.size-window))
@@ -141,8 +150,17 @@
 (put 'set-window-viewport-linear:8 'deprecated-command t)
 (put 'set-viewport-linear:9 'deprecated-command t)
 (put 'set-window-viewport-linear:9 'deprecated-command t)
+(defgroup cycle "Window Cycling" :group focus :require sawfish.wm.commands.x-cycle)
+(autoload-command 'cycle-windows 'sawfish.wm.commands.x-cycle)
+(autoload-command 'cycle-windows-backwards 'sawfish.wm.commands.x-cycle)
+(autoload-command 'cycle-group 'sawfish.wm.commands.x-cycle)
+(autoload-command 'cycle-group-backwards 'sawfish.wm.commands.x-cycle)
+(autoload-command 'cycle-prefix 'sawfish.wm.commands.x-cycle)
+(autoload-command 'cycle-prefix-backwards 'sawfish.wm.commands.x-cycle)
+(autoload-command 'cycle-class 'sawfish.wm.commands.x-cycle)
+(autoload-command 'cycle-class-backwards 'sawfish.wm.commands.x-cycle)
 (autoload-command (quote xterm) (quote sawfish.wm.commands.xterm))
-(autoload-command (quote 3d-hack) (quote sawfish.wm.ext.3d-hack))
+(autoload-command (quote 3d-hack) (quote sawfish.wm.ext.3d-hack) #:user-level (quote expert))
 (defgroup audio "Sound" :require sawfish.wm.ext.audio-events)
 (defgroup edge-flip "Edge Flipping" :group workspace :require sawfish.wm.ext.edge-flip)
 (defgroup match-window "Matched Windows" :layout single :require sawfish.wm.ext.match-window)
@@ -168,21 +186,4 @@
 (autoload-command (quote describe-key) (quote sawfish.wm.util.keymap))
 (autoload-command (quote describe-key-to-screen) (quote sawfish.wm.util.keymap))
 (autoload-command (quote quote-event) (quote sawfish.wm.util.keymap))
-(autoload-command (quote gnome-about) (quote sawfish.wm.commands.gnome))
-(autoload-command (quote help:about) (quote sawfish.wm.commands.help))
-(defgroup cycle "Window Cycling" :group focus :require sawfish.wm.commands.x-cycle)
-(autoload-command 'cycle-windows 'sawfish.wm.commands.x-cycle)
-(autoload-command 'cycle-windows-backwards 'sawfish.wm.commands.x-cycle)
-(autoload-command 'cycle-group 'sawfish.wm.commands.x-cycle)
-(autoload-command 'cycle-group-backwards 'sawfish.wm.commands.x-cycle)
-(autoload-command 'cycle-prefix 'sawfish.wm.commands.x-cycle)
-(autoload-command 'cycle-prefix-backwards 'sawfish.wm.commands.x-cycle)
-(autoload-command 'cycle-class 'sawfish.wm.commands.x-cycle)
-(autoload-command 'cycle-class-backwards 'sawfish.wm.commands.x-cycle)
-(autoload-command (quote raise-and-pass-through-click) (quote sawfish.wm.commands.raise-commands))
-(autoload-command (quote raise-and-pass-through-click-if-focused) (quote sawfish.wm.commands.raise-commands))
-(autoload-command (quote raise-or-pass-through-click) (quote sawfish.wm.commands.raise-commands))
-(autoload-command (quote raise-window-and-pass-through-click) (quote sawfish.wm.commands.raise-commands) #:user-level 'expert)
-(autoload-command (quote raise-group-and-pass-through-click) (quote sawfish.wm.commands.raise-commands) #:user-level 'expert)
-(autoload-command (quote raise-transients-and-pass-through-click) (quote sawfish.wm.commands.raise-commands) #:user-level 'expert)
 ;;; ::autoload-end::
