@@ -38,9 +38,10 @@
 	    (or (documentation fun nil (symbol-value fun t)) "Undocumented.")))
 
   ;;###autoload
-  (define-command 'describe-symbol describe-symbol #:spec "SSymbol:")
-  (define-command-to-screen
-   'describe-symbol-to-screen describe-symbol #:spec "SSymbol:")
+  (define-command 'describe-symbol describe-symbol
+    #:spec "SSymbol:" #:user-level 'expert)
+  (define-command-to-screen 'describe-symbol-to-screen describe-symbol
+   #:spec "SSymbol:" #:user-level 'expert)
 
   (define (apropos-output symbols)
     (let ((separator (make-string 72 ?-)))
@@ -60,9 +61,9 @@
 
   ;;###autoload
   (define-command 'apropos-function apropos-function
-    #:spec "sApropos functions:\nP")
+    #:spec "sApropos functions:\nP" #:user-level 'expert)
   (define-command-to-screen 'apropos-function-to-screen apropos-function
-    #:spec "sApropos functions:\nP")
+    #:spec "sApropos functions:\nP" #:user-level 'expert)
   
   (define (apropos-variable regexp)
     (format standard-output "Apropos variable `%s':\n" regexp)
@@ -70,6 +71,6 @@
 
   ;;###autoload
   (define-command 'apropos-variable apropos-variable
-    #:spec "sApropos variables:")
+    #:spec "sApropos variables:" #:user-level 'expert)
   (define-command-to-screen 'apropos-variable-to-screen apropos-variable
-    #:spec "sApropos variables:"))
+    #:spec "sApropos variables:" #:user-level 'expert))
