@@ -1,5 +1,12 @@
 2000-10-26  John Harper  <jsh@eazel.com>
 
+	* sawfish/wm/workspace.jl, sawfish/wm/commands/describe.jl,
+	sawfish/wm/ext/3d-hack.jl: made some commands #:user-level
+	expert
+
+	* sawfish/wm/util/nokogiri.jl (nokogiri-report-commands): fixed
+	and/or typo
+
 	* sawfish/wm/util/groups.jl (persistent-group-ids): changed
 	type of this option from `(list string)' to `(list symbol)' as
 	it should have been
